--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "webpack-dev-server --mode development",
-    "build": "webpack --mode development"
+    "build": "webpack --mode development",
+    "story": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "jquery": "^3.3.1",
@@ -16,6 +17,7 @@
     "semantic-ui-react": "^0.80.2"
   },
   "devDependencies": {
+    "@storybook/react": "^3.4.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
