--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "webpack-dev-server --mode development",
     "build": "webpack --mode development",
-    "story": "start-storybook -p 9001 -c .storybook"
+    "story-serve": "start-storybook -p 9001 -c .storybook",
+    "story-build": "build-storybook -c .storybook -o storybook"
   },
   "dependencies": {
     "jquery": "^3.3.1",
